[gd_scene load_steps=23 format=3 uid="uid://cbfe05uqpe2ww"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_plba5"]
[ext_resource type="PackedScene" uid="uid://b13uvvo3pvlly" path="res://Player/Sprite/player_sprite.tscn" id="2_ekdli"]
[ext_resource type="Script" path="res://Player/camera_2d.gd" id="2_rraco"]
[ext_resource type="PackedScene" uid="uid://dnshaeplewb85" path="res://Player/Palette/palette.tscn" id="2_ybmla"]
[ext_resource type="Texture2D" uid="uid://dom47dbbu8wyy" path="res://Player/VFX/Player Shield.png" id="4_w330a"]
[ext_resource type="FontFile" uid="uid://dt7ijpr3w8s08" path="res://Common/Fonts/exo/Exo-Bold.otf" id="5_qrmso"]
[ext_resource type="Texture2D" uid="uid://d36h547sfej1u" path="res://HUD/PaletteMilestone1.png" id="6_wpbjh"]
[ext_resource type="Texture2D" uid="uid://2u5mv3jdgtjm" path="res://HUD/PaletteMilestone2.png" id="7_u5avh"]

[sub_resource type="Gradient" id="Gradient_2j6n7"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 0.270588, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wyict"]
gradient = SubResource("Gradient_2j6n7")
height = 12

[sub_resource type="Gradient" id="Gradient_osjcn"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0.929412, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vvlfp"]
gradient = SubResource("Gradient_osjcn")
height = 12

[sub_resource type="Gradient" id="Gradient_6n8lw"]
offsets = PackedFloat32Array(0, 0.699187)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h7qcx"]
gradient = SubResource("Gradient_6n8lw")
height = 80
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wb7x1"]
radius = 19.0
height = 64.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p5nhg"]
radius = 19.0
height = 64.0

[sub_resource type="Gradient" id="Gradient_p7gyu"]
offsets = PackedFloat32Array(0.373984, 0.699187, 0.711382)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 0.0941176, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4kebf"]
gradient = SubResource("Gradient_p7gyu")
width = 800
height = 800
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_qy1jw"]
radius = 400.0

[sub_resource type="LabelSettings" id="LabelSettings_0a4sd"]
font = ExtResource("5_qrmso")
font_size = 60

[sub_resource type="Gradient" id="Gradient_qhjbm"]
offsets = PackedFloat32Array(0.502128, 0.953192)
colors = PackedColorArray(0, 0, 0, 0, 0.5, 0, 0, 0.38)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vy72v"]
gradient = SubResource("Gradient_qhjbm")
width = 1920
height = 1080
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.9, 0.9)

[node name="Player" type="CharacterBody2D"]
z_index = 1
position = Vector2(290, 138)
collision_layer = 0
script = ExtResource("1_plba5")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 2560
limit_bottom = 1440
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 50.0
script = ExtResource("2_rraco")

[node name="LaserSight" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0

[node name="RayCast2D" type="RayCast2D" parent="LaserSight"]
position = Vector2(56, 19)
collision_mask = 25

[node name="HealthBar" type="Sprite2D" parent="."]
position = Vector2(-39, 44)
texture = SubResource("GradientTexture2D_wyict")
centered = false

[node name="HealthBarInner" type="Sprite2D" parent="HealthBar"]
texture = SubResource("GradientTexture2D_vvlfp")
centered = false

[node name="HealthLabel" type="Label" parent="HealthBar"]
offset_right = 64.0
offset_bottom = 16.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 15
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShieldSprite" type="Sprite2D" parent="."]
position = Vector2(-7, 0)
texture = ExtResource("4_w330a")

[node name="PlayerSprite" parent="." instance=ExtResource("2_ekdli")]
position = Vector2(0, 1.90735e-06)

[node name="Shadow" type="Sprite2D" parent="PlayerSprite"]
z_as_relative = false
position = Vector2(3.49164e-05, 8)
rotation = -1.5708
texture = SubResource("GradientTexture2D_h7qcx")

[node name="BulletSpawnPoint" type="Node2D" parent="PlayerSprite"]
position = Vector2(18.9998, -56.0001)

[node name="TipOfBarrelPoint" type="Node2D" parent="PlayerSprite"]
position = Vector2(17.9998, -66.0001)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, 1)
shape = SubResource("CapsuleShape2D_wb7x1")

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-8, 1)
shape = SubResource("CapsuleShape2D_p5nhg")

[node name="Palette" parent="." instance=ExtResource("2_ybmla")]
position = Vector2(0, -36)

[node name="GunCooldownTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="GunSwitchCooldownTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="HitImmunityTimer" type="Timer" parent="."]
one_shot = true

[node name="ChromeKnucklesProximity" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 64

[node name="Sprite2D" type="Sprite2D" parent="ChromeKnucklesProximity"]
texture = SubResource("GradientTexture2D_4kebf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChromeKnucklesProximity"]
visible = false
shape = SubResource("CircleShape2D_qy1jw")

[node name="PlayerInterface" type="CanvasLayer" parent="."]

[node name="PlayerUpgradesInterface" type="HBoxContainer" parent="PlayerInterface"]
offset_left = 315.0
offset_top = 50.0
offset_right = 355.0
offset_bottom = 90.0

[node name="PlayerConditionsInterface" type="VBoxContainer" parent="PlayerInterface"]
offset_left = 70.0
offset_top = 128.0
offset_right = 110.0
offset_bottom = 168.0

[node name="PlayerPoints" type="Control" parent="PlayerInterface"]
layout_mode = 3
anchors_preset = 0
offset_left = 1810.0
offset_top = 979.0
offset_right = 1810.0
offset_bottom = 979.0

[node name="PlayerPointsLabel" type="Label" parent="PlayerInterface/PlayerPoints"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_0a4sd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerPointsBGLeft" type="Sprite2D" parent="PlayerInterface/PlayerPoints"]
position = Vector2(-33.5, 0)
texture = ExtResource("6_wpbjh")

[node name="PlayerPointsBGRight" type="Sprite2D" parent="PlayerInterface/PlayerPoints"]
position = Vector2(33.5, 0)
texture = ExtResource("7_u5avh")

[node name="PlayerHitOverlay" type="Sprite2D" parent="PlayerInterface"]
texture = SubResource("GradientTexture2D_vy72v")
centered = false

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="ChromeKnucklesProximity" to="." method="_on_chrome_knuckles_proximity_area_entered"]
[connection signal="body_entered" from="ChromeKnucklesProximity" to="." method="_on_chrome_knuckles_proximity_body_entered"]
[connection signal="body_exited" from="ChromeKnucklesProximity" to="." method="_on_chrome_knuckles_proximity_body_exited"]
